--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GLENN RADARS</title>
+    <title>joseph stalin</title>
     <STyle type="text/css">
 
     </STyle>
@@ -89,9 +89,13 @@
 <h1 class="karir">Serangan balasan Soviet: 1942–1945</h1>
 
 
-<p>Pada November 1942, pasukan Soviet mulai memukul mundur pasukan Jerman yang terlibat dalam kampanye militer strategis di selatan. Walaupun sejauh ini korban jiwa di pihak Uni Soviet mencapai 2,5 juta, keberhasilan ini memungkinkan Soviet untuk menjadi pihak yang menyerang hingga akhir perang di Front Timur.[484] Jerman mencoba mengepung pasukan Soviet di Kursk, tetapi serangan ini berhasil dihalau oleh Uni Soviet.[485] Pada akhir tahun 1943, pasukan Soviet menduduki setengah wilayah yang direbut oleh Jerman dari tahun 1941 sampai 1942.[486] Hasil produksi industri militer Soviet juga meningkat secara substansial dari akhir 1941 sampai awal tahun 1943 setelah Stalin memindahkan pabrik-pabrik ke wilayah timur yang aman dari serangan darat dan udara Jerman.[487]</p>
+<p>Pada Desember 1941, Uni Soviet melancarkan serangan balik besar-besaran dengan dipimpin oleh joseph stalin terhadap pusat front, sehingga Jerman kocar-kacir dipukul mundur dari Moskow. Jerman memukul mundur serangan Soviet berikutnya di wilayah utara dan selatan front. Namun, mereka membutuhkan waktu hampir dua bulan untuk menstabilkan front timur di kota Smolensk. Mereka kemudian berkumpul kembali dan berencana untuk melancarkan serangan kembali. 
+
+    Operasi Blitzkrieg gagal mencapai tujuannya. Meski demikian, para pimpinan Jerman masih yakin bahwa Uni Soviet sudah berada di ambang kehancuran. Mereka beranggapan bahwa negara tersebut sudah hampir kehabisan sumber dayanya. Lebih lanjut, mereka meyakini bahwa warga Uni Soviet yang kesal tidak akan bersedia mengorbankan nyawa mereka untuk rezim Stalin. Faktanya memang sejumlah orang di wilayah yang direbut oleh Wehrmacht pada awalnya menyambut Jerman sebagai pembebas. 
+    
+    Namun selama musim dingin 1941–1942, Soviet mengevakuasi pabrik di timur dan meningkatkan produksi pesawat, tank dan senjata lainnya secara besar-besaran. Britania Raya dan Amerika Serikat mendukung upaya ini dengan mengirimkan material. Sementara itu, kebijakan pembantaian massal Jerman mendukung argumen Stalin bahwa keberlangsungan hidup warga Soviet bergantung pada upaya pengusiran penjajah Jerman. Selain itu, Tentara Merah yang mundur dieksekusi oleh NKVD, polisi rahasia Soviet. Dihadapkan dengan kemungkinan mati kelaparan di kamp Jerman jika mereka menyerah atau menghadapi regu tembak jika mereka mundur, tentara Soviet umumnya lebih memilih bertempur sampai mati. pasukan Soviet mulai memukul mundur pasukan Jerman yang terlibat dalam kampanye militer strategis di selatan. Walaupun sejauh ini korban jiwa di pihak Uni Soviet mencapai 2,5 juta, keberhasilan ini memungkinkan Soviet untuk menjadi pihak yang menyerang hingga akhir perang di Front Timur.[484] Jerman mencoba mengepung pasukan Soviet di Kursk, tetapi serangan ini berhasil dihalau oleh Uni Soviet.[485] Pada akhir tahun 1943, pasukan Soviet menduduki setengah wilayah yang direbut oleh Jerman dari tahun 1941 sampai 1942.[486] Hasil produksi industri militer Soviet juga meningkat secara substansial dari akhir 1941 sampai awal tahun 1943 setelah Stalin memindahkan pabrik-pabrik ke wilayah timur yang aman dari serangan darat dan udara Jerman.[487]</p>
 <p>Pada November 1943, Stalin bertemu dengan Churchill dan Roosevelt di Teheran, sebuah lokasi yang dipilih oleh Stalin.[495] Di sana, Stalin dan Roosevelt saling akrab dan mereka sama-sama ingin membubarkan Imperium Britania pada masa setelah perang.[496] Di Teheran, ketiganya sepakat untuk memecah belah wilayah Jerman agar militer Jerman tidak dapat bangkit lagi</p>
 <p></p>
 <A CLASS="INFO">INFO SELENGKAPNYA:</A><a CLASS="INFO" href="https://id.wikipedia.org/wiki/Josef_Stalin#cite_note-FOOTNOTEMontefiore2007268%E2%80%93270Khlevniuk201528-151">WIKIPEDIA</a>
 </body>
-</html>
+</html>e
